feat: getByKeyAndType and getBySimpleClassName